fix: CORS origin patterns for EC2